<resources>
    <string name="app_name">AirChats</string>
    <string name="your_email">Enter your Email</string>
    <string name="your_password">Enter password</string>
    <string name="your_name">Enter your name</string>
    <string name="sign_up">Sign up</string>
    <string name="tap_to_log_in">Tap to Log In</string>
    <string name="text">text</string>
    <string name="name">name</string>
    <string name="send">Send</string>
    <string name="confirm_your_password">Confirm your password</string>
</resources>