<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signLoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_air"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

     <EditText
    android:id="@+id/nameEditText"
    android:layout_marginTop="8dp"
    android:hint="@string/your_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/loginSignUpButton"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/toggleLoginSignUpTextView"
        android:text="@string/tap_to_log_in"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:clickable="true"
        android:onClick="toggleLoginMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>